--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha1
	- Fix random methods not working for localplay
	- Fixed extra space on prefixed albums (Thx ibizaman)
        - Add missing operator on tag and rating searches so they will
                work with other methods (Thx kiehnet@netscape.net)
	- Add MusicBrainz MBID support to uniqly identify albums and
		also get more album art (Thx flowerysong)
	- Fix the url to song function
	- Add full path to the files needed by the installation just to 
		make it a little clearer
	- Fixed potential endless loop with malformed genre tags in mp3s
		(Thx Bernhard Weyrauch)
	- Fixed web path always returning false on /test.php
	- Updated Man Page to fix litian problems for Debian packaging
	- Fixed bug where video was registering as songs for now playing
		and stats
	- Add phpmailer and change ampache.cfg.php.dist
	- Fixed manpage (Thx Porthose)

--------------------------------------------------------------------------
  v.3.5 05/05/2009
	- Added complete Czech translation (Thx martin hason)
	- Add the AlmightyOatmeal-Sanity check to prevent a clean from
		removing all songs if your mount failed, but is still
		readable by ampache
	- Make the Lang Install page prettier
	- Added Check for hash,inet_pton,windows PHP Version to init so
		that upgrades without pre-reqs are handled correctly
	- Allow mms,mmsh,mmsu,mmst,rstp in Radio Stream URLs
	- Fixed a problem where after adding a track to a saved playlist
		there was no UI response upon deleting the track without
		a page refresh
	- Fix an issue where the full version of the album art was never
		used even when requested
	- Fix maxlength on acl fields being to small for all IPv6 addresses