@@ -19,7 +19,7 @@
  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 if (INSTALL != '1') { exit; } 
-$prefix = dirname(__FILE__); 
+$prefix = realpath(dirname(__FILE__). "/../");
 $dir = is_rtl($htmllang) ? 'rtl' : 'ltr';
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -47,7 +47,7 @@ $dir = is_rtl($htmllang) ? 'rtl' : 'ltr';
 			<li><?php echo sprintf(_("Your webserver has read access to the %s file and the %s file"),$prefix . '/sql/ampache.sql',$prefix . '/config/ampache.cfg.dist'); ?></li>
 		</ul>
 		<p>
-<?php echo _("Once you have ensured that you have the above requirements please fill out the information below. You will only be asked for the required config values. If you would like to make changes to your ampache install at a later date simply edit /config/ampache.cfg.php"); ?>
+<?php echo sprintf(_('Once you have ensured that you have the above requirements please fill out the information below. You will only be asked for the required config values. If you would like to make changes to your ampache install at a later date simply edit %s'),$prefix . '/config/ampache.cfg.php'); ?>
 		</p>
 	</div>
 	
@@ -104,10 +104,8 @@ $dir = is_rtl($htmllang) ? 'rtl' : 'ltr';
 	<td>&nbsp;</td>
 	<td><input type="submit" value="<?php echo _("Insert Database"); ?>" /></td>
 </tr>
-	
-		</table>
-		</form>
-		
+</table>
+</form>		
 	</div>
 	<div id="bottom">
     	<p><strong>Ampache Installation.</strong><br />
