@@ -20,7 +20,7 @@
 
 */
 if (INSTALL != '1') { exit; }
-$prefix = dirname(__FILE__); 
+$prefix = realpath(dirname(__FILE__). "/../");
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $htmllang; ?>" lang="<?php echo $htmllang; ?>">
