@@ -18,7 +18,7 @@
  along with this program; if not, write to the Free Software
  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
-$prefix = dirname(__FILE__); 
+$prefix = realpath(dirname(__FILE__). "/../");
 ?>
 <?php if (INSTALL != '1') { exit; } ?>
 <?php $results = 0; ?>
@@ -43,10 +43,10 @@ $prefix = dirname(__FILE__);
 		</p>
 		<ul>
 			<li><?php echo _('A MySQL Server with a username and password that can create/modify databases'); ?></li>
-                        <li><?php echo sprintf(_("Your webserver has read access to the %s file and the %s file"),$prefix . '/sql/ampache.sql',$prefix . '/config/ampache.cfg.dist'); ?></li>
+                        <li><?php echo sprintf(_("Your webserver has read access to the %s file and the %s file"),$prefix . '/sql/ampache.sql',$prefix . '/config/ampache.cfg.php.dist'); ?></li>
 		</ul>
 		<p>
-<?php echo _("Once you have ensured that you have the above requirements please fill out the information below. You will only be asked for the required config values. If you would like to make changes to your ampache install at a later date simply edit /config/ampache.cfg.php"); ?>
+<?php echo sprintf(_("Once you have ensured that you have the above requirements please fill out the information below. You will only be asked for the required config values. If you would like to make changes to your ampache install at a later date simply edit %s"),$prefix . '/config/ampache.cfg.php.dist'); ?>
 		</p>
 <?php require_once 'templates/show_install_check.inc.php'; ?>
 </div>
